--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,7 +1,10 @@
-FROM node:latest
+FROM node:16 AS builder
 WORKDIR /app
 COPY package*.json ./
 RUN npm install
 RUN npm install -g ts-node
 COPY . .
-CMD ["npm", "run", "dev"]
+RUN npm run build
+EXPOSE 3000
+CMD ["npm", "run", "start"]
+
