--- a/api/package.json
+++ b/api/package.json
@@ -7,7 +7,10 @@
     "test": "NODE_OPTIONS=--experimental-vm-modules jest",
     "dev": "ts-node src/index.ts",
     "start": "node dist/index.js",
-    "build": "npx tsc"
+    "build": "npx tsc",
+    "generate:spec": "tsoa spec",
+    "generate:routes": "tsoa routes",
+    "generate": "npm run generate:spec && npm run generate:routes"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +21,8 @@
     "lowdb": "^7.0.1",
     "luxon": "^3.4.4",
     "ramda": "^0.29.1",
+    "swagger-ui-express": "^5.0.0",
+    "tsoa": "^6.2.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
@@ -27,6 +32,7 @@
     "@types/node": "^20.12.4",
     "@types/ramda": "^0.29.12",
     "@types/supertest": "^6.0.2",
+    "@types/swagger-ui-express": "^4.1.6",
     "@types/uuid": "^9.0.8",
     "jest": "^29.7.0",
     "nodemon": "^3.1.0",
