--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,10 +1,11 @@
-FROM node:16 AS builder
+FROM node:20
 WORKDIR /app
 COPY package*.json ./
 RUN npm install
 RUN npm install -g ts-node
 COPY . .
 RUN npm run build
+RUN npm run generate
 EXPOSE 3000
-CMD ["npm", "run", "start"]
+CMD ["npm", "run", "dev"]
 
