--- a/api/package.json
+++ b/api/package.json
@@ -16,6 +16,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/swagger-ui-express": "^4.1.6",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "lowdb": "^7.0.1",
@@ -32,8 +33,10 @@
     "@types/node": "^20.12.4",
     "@types/ramda": "^0.29.12",
     "@types/supertest": "^6.0.2",
-    "@types/swagger-ui-express": "^4.1.6",
     "@types/uuid": "^9.0.8",
+    "@typescript-eslint/eslint-plugin": "^7.6.0",
+    "@typescript-eslint/parser": "^7.6.0",
+    "eslint": "^8.56.0",
     "jest": "^29.7.0",
     "nodemon": "^3.1.0",
     "supertest": "^6.3.4",
